PROJECT(util)

FIND_PACKAGE(GDAL REQUIRED)

set(UTIL_INCLUDE_DIRS
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${GTK2_INCLUDE_DIRS}
  ${GDAL_INCLUDE_DIRS}
)

#includes
SET(util_INCLUDE_DIR
  ${util_SOURCE_DIR}/
  CACHE INTERNAL ""
)

ADD_DEFINITIONS(-DHAVE_GTK -DHAVE_CAIRO)

INCLUDE_DIRECTORIES(${UTIL_INCLUDE_DIRS})

SET(worldgen_SRCS
  worldgen.c
)

SET(gmapview_SRCS
  gmapview.c
)

if (GDAL_FOUND)
  ADD_EXECUTABLE(worldgen ${worldgen_SRCS})
  TARGET_LINK_LIBRARIES(worldgen ${GDAL_LIBRARIES})
  INSTALL(TARGETS worldgen DESTINATION ${BIN_INSTALL_DIR})
endif (GDAL_FOUND)

if (GDAL_FOUND AND GTK2_FOUND)
  ADD_EXECUTABLE(gmapview ${gmapview_SRCS})
  TARGET_LINK_LIBRARIES(gmapview
    map
    ${GDAL_LIBRARIES}
    ${GTK2_LIBRARIES}
  )
  INSTALL(TARGETS gmapview DESTINATION ${BIN_INSTALL_DIR})
endif (GDAL_FOUND AND GTK2_FOUND)

